--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,57 @@
+# Node modules
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.pid.lock
+
+# Build outputs
+dist/
+build/
+out/
+.next/
+.vite/
+
+# Vite / cache
+.vite/
+.cache/
+
+# Dependency directories
+.pnp/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Testing
+coverage/
+.nyc_output/
+
+# Editor directories and files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# TypeScript
+*.tsbuildinfo
+
+# Misc
+/*.tgz
+coverage/
 # Logs
 logs
 *.log
