--- a/.gitignore
+++ b/.gitignore
@@ -1,78 +1,41 @@
-# Node modules
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Logs
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-*.log
+.pnpm-debug.log*
 
-# Runtime data
-pids/
-*.pid
-*.pid.lock
+# env files (can opt-in for committing if needed)
+.env*
 
-# Build outputs
-dist/
-build/
-out/
-.next/
-.vite/
+# vercel
+.vercel
 
-# Vite / cache
-.vite/
-.cache/
-
-# Dependency directories
-.pnp/
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Testing
-coverage/
-.nyc_output/
-
-# Editor directories and files
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# TypeScript
+# typescript
 *.tsbuildinfo
-
-# Misc
-/*.tgz
-coverage/
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+next-env.d.ts
